<resources>
    <string name="app_name">Learn Arabic Language</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="normal">NORMA</string>
    <string name="extra">EXTRA</string>
    <string name="supers">SUPER</string>
    <string name="pro">PRO</string>
    <string name="text_type">Text Type</string>
    <string name="arabic_in_your_hands_ar">العربية بين يديك</string>
    <string name="arabic_in_your_hands_en">Arabic in your hands</string>
    <string name="size">Text Size</string>
    <string name="arabic_size">Arabic Size</string>
    <string name="english_size">English Size</string>
    <string name="show">Show language</string>
    <string name="ar">AR</string>
    <string name="ar_en">AR | EN</string>
    <string name="en">EN</string>
    <string name="lesson_words">Lesson Words</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="repeat">Repeat</string>
    <string name="shadow">Shadow</string>
    <string name="about_us">About Us</string>
    <string name="common_words">Common Words</string>
    <string name="settings">Settings</string>
    <string name="test">Test</string>
    <string name="we_phone_number">+201551083276</string>
    <string name="orange_phone_number">+201212318135</string>
    <string name="select_number">Select Number</string>

</resources>
