<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SettingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <include layout="@layout/app_main_bar" android:id="@+id/main_page_toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/arabic_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic_in_your_hands_ar"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:textColor="@android:color/black"
                    android:layout_margin="5dp"/>

                <TextView
                    android:id="@+id/english_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic_in_your_hands_en"
                    android:gravity="center"
                    android:textColor="@color/red"
                    android:textSize="25sp"
                    android:layout_margin="5dp"/>

            </LinearLayout>



            <View
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:background="@android:color/darker_gray"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_type"
                android:layout_margin="4dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/top_rounded_corners_red"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/normal_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:text="@string/normal"
                    android:layout_marginStart="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/red_dark"/>

                <Button
                    android:id="@+id/extra_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:text="@string/extra"
                    android:textStyle="bold"
                    android:textColor="@color/red_dark"/>

                <Button
                    android:id="@+id/super_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:text="@string/supers"
                    android:textStyle="bold"
                    android:textColor="@color/red_dark"/>

                <Button
                    android:id="@+id/pro_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/red_dark"
                    android:text="@string/pro"
                    android:layout_marginEnd="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bottom_rounded_corners_red"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/top_rounded_corners_red"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic_size"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"/>


                <SeekBar
                    android:id="@+id/arabic_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:max="25"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:text="@string/english_size"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"/>


                <SeekBar
                    android:id="@+id/english_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:max="25"

                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bottom_rounded_corners_red"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show"
                android:textColor="@android:color/black"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/top_rounded_corners_red"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ar_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:text="@string/ar"
                    android:layout_marginStart="2dp"
                    android:textStyle="bold"
                    android:textColor="@color/red_dark"/>

                <Button
                    android:id="@+id/ar_en_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:text="@string/ar_en"
                    android:textStyle="bold"
                    android:textColor="@color/red_dark"/>

                <Button
                    android:id="@+id/en_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:background="@android:color/white"
                    android:text="@string/en"
                    android:textStyle="bold"
                    android:textColor="@color/red_dark"/>



            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="@drawable/bottom_rounded_corners_red"/>


                <Switch
                    android:id="@+id/repeat_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:text="@string/repeat"
                    android:textStyle="bold"
                    android:switchPadding="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                   />


            <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:text="@string/shadow"
                android:textStyle="bold"
                android:id="@+id/shadow_switch"
                android:switchPadding="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_10sdp"
                />





        </LinearLayout>


    </ScrollView>
</LinearLayout>